moved david image

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         <p>Building the brand through grassroots storytelling and growth.</p>
       </div>
       <div class="card team-card" data-link="https://david-martinez.vercel.app/">
-        <img src="David_Martinez.jpg" alt="David Martinez" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
+        <img src="media/David_Martinez.jpg" alt="David Martinez" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
         <h3>David Martinez</h3>
         <p><strong>Lead Developer</strong></p>
         <p>Crafting immersive 3D and web experiences.</p>
