--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         <p>Crafting immersive 3D and web experiences.</p>
       </div>
       <div class="card team-card" data-link="https://esai-gamboa.vercel.app/">
-        <img src="Esai_Gamboa.jpg" alt="Esai Gamboa" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
+        <img src="media/Esai_Gamboa.jpg" alt="Esai Gamboa" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
         <h3>Esai Gamboa</h3>
         <p><strong>Financial Specialist</strong></p>
         <p>Linux Expert and Chief Financial Officer.</p>
