--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         <p>Cross-platform mobile builder with an eye for design.</p>
       </div>
       <div class="card team-card" data-link="https://3dvr-mark-wells.vercel.app/">
-        <img src="mark-wells.png" alt="Mark Wells" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
+        <img src="media/mark-wells.png" alt="Mark Wells" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem;">
         <h3>Mark Wells</h3>
         <p><strong>Senior Developer</strong></p>
         <p>10+ years in software design, specializing in real-time embedded systems and performance-critical code.</p>
