fixed pointer css on hero section

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
   <a class="sticky-cta" href="subscribe.html">Subscribe</a>
 
-    <section class="hero" style="cursor: pointer;">
+    <section class="hero">
       <img src="3DVR.png" alt="3dvr.tech logo" />
       <h2>Build the Future</h2>
       <p>Open-source tech for digital nomads, creators, and explorers.</p>
