Link homepage plan cards to dedicated pages

--- a/index.html
+++ b/index.html
@@ -164,17 +164,17 @@
     <h2>Choose Your Plan</h2>
     <p>Start building your vision with the plan that fits you best. Upgrade anytime.</p>
     <div class="card-grid">
-      <a href="subscribe/index.html#free" class="card">
+      <a href="subscribe/free-plan.html" class="card">
         <h3>Free Plan</h3>
         <p>Get limited access to tools, resources, and community. Perfect for curious explorers.</p>
         <span class="btn-like">Learn More</span>
       </a>
-      <a href="subscribe/index.html#supporter" class="card">
+      <a href="subscribe/early-supporter.html" class="card">
         <h3>$5 / Month</h3>
         <p>Early Supporter Tier: Show your support, unlock exclusive updates, and help shape the future.</p>
         <span class="btn-like">Learn More</span>
       </a>
-      <a href="subscribe/index.html#pro" class="card">
+      <a href="subscribe/full-access.html" class="card">
         <h3>$20 / Month</h3>
         <p>Full Access: Website, app, tech support, consulting, and more. Fully tailored to your goals.</p>
         <span class="btn-like">Learn More</span>
