--- a/index.html
+++ b/index.html
@@ -166,17 +166,17 @@
     <div class="card-grid">
       <a href="subscribe/free-plan.html" class="card">
         <h3>Free Plan</h3>
-        <p>Get limited access to tools, resources, and community. Perfect for curious explorers.</p>
+        <p>Discover your vision and get started with a free website on a 3dvr.tech subdomain.</p>
         <span class="btn-like">Learn More</span>
       </a>
       <a href="subscribe/early-supporter.html" class="card">
-        <h3>$5 / Month</h3>
-        <p>Early Supporter Tier: Show your support, unlock exclusive updates, and help shape the future.</p>
+        <h3>$5/month – Family &amp; Friends</h3>
+        <p>Keep your free 3dvr.tech site and add light monthly support for small updates and experiments.</p>
         <span class="btn-like">Learn More</span>
       </a>
       <a href="subscribe/full-access.html" class="card">
-        <h3>$20 / Month</h3>
-        <p>Full Access: Website, app, tech support, consulting, and more. Fully tailored to your goals.</p>
+        <h3>$20/month – Founder Plan</h3>
+        <p>Launch your brand with a custom domain (included if $10/yr or less), plus more support as your project grows.</p>
         <span class="btn-like">Learn More</span>
       </a>
     </div>
