--- a/subscribe.html
+++ b/subscribe.html
@@ -37,6 +37,7 @@
     .card:hover { background: var(--panel-hover); transform: translateY(-3px); }
     .card h2 { font-family: Poppins, sans-serif; font-size: 1.2rem; color: var(--accent); margin-bottom: 0.5rem; }
     .price { font-size: 1.8rem; font-weight: 800; margin: .25rem 0 .75rem; }
+    .tagline { color: var(--muted); font-size: 1rem; line-height: 1.5; margin-bottom: .75rem; }
     ul { margin-left: 1rem; }
     li { margin: .4rem 0; }
 
@@ -80,6 +81,7 @@
       <article id="free" class="card">
         <h2>Free Plan</h2>
         <div class="price">$0</div>
+        <p class="tagline">Discover your vision and get started with a free website on a 3dvr.tech subdomain.</p>
         <ul>
           <li>Access to public docs & starter templates</li>
           <li>Community updates & roadmap</li>
@@ -92,8 +94,9 @@
 
       <!-- SUPPORTER -->
       <article id="supporter" class="card">
-        <h2>Early Supporter</h2>
+        <h2>Family &amp; Friends</h2>
         <div class="price">$5 / month</div>
+        <p class="tagline">Keep your free 3dvr.tech site and add light monthly support for small updates and experiments.</p>
         <ul>
           <li>All Free features</li>
           <li>Early feature previews</li>
@@ -101,14 +104,15 @@
           <li>Helps fund open development</li>
         </ul>
         <!-- Stripe supporter link -->
-        <a class="cta" href="https://buy.stripe.com/28EcN599Q2dJbFdh2Qc7u07" target="_blank" rel="noopener">Become a Supporter</a>
+        <a class="cta" href="https://buy.stripe.com/28EcN599Q2dJbFdh2Qc7u07" target="_blank" rel="noopener">Join Family &amp; Friends</a>
         <div class="notice">Cancel anytime from your Stripe receipt/email.</div>
       </article>
 
       <!-- PRO -->
       <article id="pro" class="card">
-        <h2>Full Access</h2>
+        <h2>Founder Plan</h2>
         <div class="price">$20 / month</div>
+        <p class="tagline">Launch your brand with a custom domain (included if $10/yr or less), plus more support as your project grows.</p>
         <ul>
           <li>Done-for-you website & landing pages</li>
           <li>App/UI mockups & prototypes</li>
@@ -117,7 +121,7 @@
           <li>Access to the Builder Community</li>
         </ul>
         <!-- Stripe main subscribe link -->
-        <a class="cta" href="https://buy.stripe.com/9AQ7uvfne7FZb1SaEE" target="_blank" rel="noopener">Subscribe Now</a>
+        <a class="cta" href="https://buy.stripe.com/9AQ7uvfne7FZb1SaEE" target="_blank" rel="noopener">Join the Founder Plan</a>
         <div class="notice">We’ll reach out after signup to get you moving fast.</div>
       </article>
     </section>
