--- a/subscribe/early-supporter.html
+++ b/subscribe/early-supporter.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="color-scheme" content="dark light" />
-  <title>Early Supporter Plan | 3dvr.tech Subscriptions</title>
+  <title>Family &amp; Friends Plan | 3dvr.tech Subscriptions</title>
   <link rel="icon" href="../3DVRfavicon.png" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Poppins:wght@500;700&display=swap" rel="stylesheet" />
   <style>
@@ -82,42 +82,42 @@
   <main>
     <section class="hero">
       <span class="eyebrow">Subscription</span>
-      <h1>Early Supporter</h1>
-      <p>Become part of the founding crew that keeps 3dvr.tech moving forward. Get first looks, special shout-outs, and influence the roadmap.</p>
+      <h1>Family &amp; Friends</h1>
+      <p>Keep your free 3dvr.tech site and add light monthly support for small updates and experiments.</p>
       <div class="price">$5 / month</div>
       <div class="actions">
-        <a class="cta primary" href="https://buy.stripe.com/28EcN599Q2dJbFdh2Qc7u07" target="_blank" rel="noopener">Become a supporter</a>
+        <a class="cta primary" href="https://buy.stripe.com/28EcN599Q2dJbFdh2Qc7u07" target="_blank" rel="noopener">Join Family &amp; Friends</a>
         <a class="cta secondary" href="index.html#plans">Back to all plans</a>
       </div>
     </section>
 
     <section class="panel">
-      <h2>Supporter perks</h2>
-      <p>All the Free plan essentials, plus exclusive updates and visibility that only early supporters receive.</p>
+      <h2>What's included</h2>
+      <p>Everything you already love in the Free Plan, plus a standing spot for quick updates, experiments, and check-ins.</p>
       <ul>
-        <li>Early access drops—test-drive new tools, prototypes, and experiments before anyone else.</li>
-        <li>Behind-the-scenes dev notes and video recaps showing how the platform is evolving.</li>
-        <li>Opt-in recognition: have your name or brand listed on upcoming supporter walls.</li>
-        <li>Priority Q&A in community meetups and roadmap sessions.</li>
-        <li>Special digital swag & supporter badge for social sharing.</li>
+        <li>Keep your 3dvr.tech subdomain polished with routine touch-ups and content refreshes.</li>
+        <li>Request light copy, photo, or layout tweaks each month—perfect for quick ideas.</li>
+        <li>Try out small experiments and see what sticks with guided implementation support.</li>
+        <li>Get personalized suggestions via monthly email check-ins and recap notes.</li>
+        <li>Stay in the loop on new drops, templates, and features as soon as they land.</li>
       </ul>
     </section>
 
     <section class="panel">
-      <h2>Your impact</h2>
-      <p>Your $5 goes directly toward open-source maintenance, infrastructure, and experiment budgets. Here’s how it adds up:</p>
+      <h2>Monthly rhythm</h2>
+      <p>Here’s how we team up each month to keep your project feeling fresh without adding stress to your schedule:</p>
       <div class="impact-grid">
         <div class="impact">
-          <h3>Keep the lights on</h3>
-          <p>Cover hosting, rendering, and bandwidth for public demos so anyone can explore our builds.</p>
+          <h3>Check &amp; polish</h3>
+          <p>We review your site, make sure links and content look sharp, and handle the tweaks you request.</p>
         </div>
         <div class="impact">
-          <h3>Fund experiments</h3>
-          <p>Prototype new interactions, ship research spikes, and publish learnings for the community.</p>
+          <h3>Experiment together</h3>
+          <p>Share a new idea and we’ll help you test it—whether it’s a new section, embed, or interactive moment.</p>
         </div>
         <div class="impact">
-          <h3>Amplify the community</h3>
-          <p>Enable more livestreams, guest sessions, and curated showcases highlighting what you create.</p>
+          <h3>Recap &amp; plan</h3>
+          <p>Receive a short summary with next-step recommendations so you always know what’s coming up.</p>
         </div>
       </div>
     </section>
@@ -125,26 +125,26 @@
     <section class="panel">
       <h2>Perfect for</h2>
       <div class="pill-list">
-        <span class="pill">Long-term believers</span>
-        <span class="pill">Studios watching the space</span>
-        <span class="pill">Creators who want visibility</span>
-        <span class="pill">Alumni & day-one members</span>
+        <span class="pill">Family-backed ventures</span>
+        <span class="pill">Creative collectives</span>
+        <span class="pill">Community projects</span>
+        <span class="pill">Friends cheering you on</span>
       </div>
     </section>
 
     <section class="faq" id="faq">
-      <h2>Supporter FAQ</h2>
+      <h2>Family &amp; Friends FAQ</h2>
       <details>
         <summary>Can I pause or cancel?</summary>
-        <p>Yes. You can cancel anytime via the Stripe receipt email you receive after checkout. You’re welcome back anytime.</p>
+        <p>Yes. You can cancel anytime via the Stripe receipt email you receive after checkout. You’re welcome back whenever you’re ready.</p>
       </details>
       <details>
-        <summary>Do I still get Free plan access?</summary>
-        <p>Absolutely. Supporters get everything in the Free plan plus all the perks listed above.</p>
+        <summary>Do I keep my Free Plan benefits?</summary>
+        <p>Absolutely. Family &amp; Friends members keep every Free Plan resource and simply layer on the extra monthly support.</p>
       </details>
       <details>
-        <summary>How do shout-outs work?</summary>
-        <p>After you join, we’ll send a quick form where you can choose how (or if) you’d like to be recognized. We respect privacy and only highlight what you approve.</p>
+        <summary>What counts as a “light update”?</summary>
+        <p>Think copy edits, new photos, swapping sections, or embedding something fresh. If a request is larger, we’ll scope it together before moving forward.</p>
       </details>
       <details>
         <summary>Need an invoice?</summary>
