--- a/subscribe/free-plan.html
+++ b/subscribe/free-plan.html
@@ -83,7 +83,7 @@
     <section class="hero">
       <span class="eyebrow">Subscription</span>
       <h1>Free Plan</h1>
-      <p>The easiest way to explore 3dvr.tech. Access the essential docs, starter kits, and community drops that power our open source mission.</p>
+      <p>Discover your vision and get started with a free website on a 3dvr.tech subdomain.</p>
       <div class="price">$0 / month</div>
       <div class="actions">
         <a class="cta primary" href="https://3dvr-portal.vercel.app/free-trial.html" target="_blank" rel="noopener">Join Free</a>
