Refine subscription plan messaging

--- a/subscribe/early-supporter.html
+++ b/subscribe/early-supporter.html
@@ -31,6 +31,7 @@
     .hero h1 { font-family: Poppins, sans-serif; font-size: clamp(2.2rem, 5vw, 3.25rem); margin-bottom: 0.75rem; }
     .hero p { color: var(--muted); font-size: 1.1rem; line-height: 1.6; max-width: 640px; margin: 0 auto; }
     .hero .price { margin: 2rem auto 0; font-size: 2.5rem; font-weight: 800; }
+    .hero-note { color: var(--muted); margin-top: 0.75rem; font-size: 1rem; }
 
     .actions { margin-top: 2rem; display: flex; justify-content: center; gap: 0.9rem; flex-wrap: wrap; }
     .cta { display: inline-flex; align-items: center; justify-content: center; padding: 0.7rem 1.4rem; border-radius: 999px; font-weight: 700; letter-spacing: 0.02em; transition: transform 0.2s ease, box-shadow 0.2s ease, background 0.2s ease; box-shadow: 0 0 0 transparent; }
@@ -83,10 +84,11 @@
     <section class="hero">
       <span class="eyebrow">Subscription</span>
       <h1>Family &amp; Friends</h1>
-      <p>Keep your free 3dvr.tech site and add light monthly support for small updates and experiments.</p>
+      <p>Keep your free 3dvr.tech site and enjoy light monthly support for small updates and experiments. Try it free for 30 days.</p>
       <div class="price">$5 / month</div>
+      <p class="hero-note">30-day free trial. Cancel anytime from your Stripe receipt/email.</p>
       <div class="actions">
-        <a class="cta primary" href="https://buy.stripe.com/28EcN599Q2dJbFdh2Qc7u07" target="_blank" rel="noopener">Join Family &amp; Friends</a>
+        <a class="cta primary" href="https://buy.stripe.com/28EcN599Q2dJbFdh2Qc7u07" target="_blank" rel="noopener">✅ Start Free Trial</a>
         <a class="cta secondary" href="index.html#plans">Back to all plans</a>
       </div>
     </section>
