--- a/subscribe/free-plan.html
+++ b/subscribe/free-plan.html
@@ -86,7 +86,7 @@
       <p>Discover your vision and get started with a free website on a 3dvr.tech subdomain.</p>
       <div class="price">$0 / month</div>
       <div class="actions">
-        <a class="cta primary" href="https://3dvr-portal.vercel.app/free-trial.html" target="_blank" rel="noopener">Join Free</a>
+        <a class="cta primary" href="https://3dvr-portal.vercel.app/free-trial.html" target="_blank" rel="noopener">✅ Start Free</a>
         <a class="cta secondary" href="index.html#plans">Back to all plans</a>
       </div>
     </section>
@@ -119,7 +119,7 @@
       <div class="steps">
         <div class="step">
           <h3>1. Create your portal login</h3>
-          <p>Tap the Join Free button to register. You’ll get instant access—no payment details required.</p>
+          <p>Tap the ✅ Start Free button to register. You’ll get instant access—no payment details required.</p>
         </div>
         <div class="step">
           <h3>2. Grab a starter kit</h3>
