--- a/subscribe/full-access.html
+++ b/subscribe/full-access.html
@@ -89,10 +89,10 @@
     <section class="hero">
       <span class="eyebrow">Subscription</span>
       <h1>Founder Plan</h1>
-      <p>Launch your brand with a custom domain (included if $10/yr or less), plus more support as your project grows.</p>
+      <p>Launch your brand with a custom domain (included if $10/yr or less) and get more support as your project grows.</p>
       <div class="price">$20 / month</div>
       <div class="actions">
-        <a class="cta primary" href="https://buy.stripe.com/9AQ7uvfne7FZb1SaEE" target="_blank" rel="noopener">Join the Founder Plan</a>
+        <a class="cta primary" href="https://buy.stripe.com/9AQ7uvfne7FZb1SaEE" target="_blank" rel="noopener">✅ Become a Founder</a>
         <a class="cta secondary" href="index.html#plans">Back to all plans</a>
       </div>
     </section>
