--- a/index.html
+++ b/index.html
@@ -170,13 +170,13 @@
         <span class="btn-like">Learn More</span>
       </a>
       <a href="subscribe/early-supporter.html" class="card">
-        <h3>$5/month – Family &amp; Friends</h3>
-        <p>Keep your free 3dvr.tech site and add light monthly support for small updates and experiments.</p>
+        <h3>Family &amp; Friends — $5 monthly (30-day free trial)</h3>
+        <p>Keep your free 3dvr.tech site and enjoy light monthly support for small updates and experiments. Try it free for 30 days.</p>
         <span class="btn-like">Learn More</span>
       </a>
       <a href="subscribe/full-access.html" class="card">
-        <h3>$20/month – Founder Plan</h3>
-        <p>Launch your brand with a custom domain (included if $10/yr or less), plus more support as your project grows.</p>
+        <h3>Founder Plan — $20 monthly</h3>
+        <p>Launch your brand with a custom domain (included if $10/yr or less) and get more support as your project grows.</p>
         <span class="btn-like">Learn More</span>
       </a>
     </div>
