--- a/subscribe.html
+++ b/subscribe.html
@@ -88,7 +88,7 @@
           <li>Open-source repos and experiments</li>
         </ul>
         <!-- If you have a real free signup page, swap this href -->
-        <a class="cta" href="https://3dvr-portal.vercel.app/free-trial.html" target="_blank" rel="noopener">Join Free</a>
+        <a class="cta" href="https://3dvr-portal.vercel.app/free-trial.html" target="_blank" rel="noopener">✅ Start Free</a>
         <div class="notice">No credit card required.</div>
       </article>
 
@@ -96,7 +96,7 @@
       <article id="supporter" class="card">
         <h2>Family &amp; Friends</h2>
         <div class="price">$5 / month</div>
-        <p class="tagline">Keep your free 3dvr.tech site and add light monthly support for small updates and experiments.</p>
+        <p class="tagline">Keep your free 3dvr.tech site and enjoy light monthly support for small updates and experiments. Try it free for 30 days.</p>
         <ul>
           <li>All Free features</li>
           <li>Early feature previews</li>
@@ -104,15 +104,15 @@
           <li>Helps fund open development</li>
         </ul>
         <!-- Stripe supporter link -->
-        <a class="cta" href="https://buy.stripe.com/28EcN599Q2dJbFdh2Qc7u07" target="_blank" rel="noopener">Join Family &amp; Friends</a>
-        <div class="notice">Cancel anytime from your Stripe receipt/email.</div>
+        <a class="cta" href="https://buy.stripe.com/28EcN599Q2dJbFdh2Qc7u07" target="_blank" rel="noopener">✅ Start Free Trial</a>
+        <div class="notice">30-day free trial. Cancel anytime from your Stripe receipt/email.</div>
       </article>
 
       <!-- PRO -->
       <article id="pro" class="card">
         <h2>Founder Plan</h2>
         <div class="price">$20 / month</div>
-        <p class="tagline">Launch your brand with a custom domain (included if $10/yr or less), plus more support as your project grows.</p>
+        <p class="tagline">Launch your brand with a custom domain (included if $10/yr or less) and get more support as your project grows.</p>
         <ul>
           <li>Done-for-you website & landing pages</li>
           <li>App/UI mockups & prototypes</li>
@@ -121,7 +121,7 @@
           <li>Access to the Builder Community</li>
         </ul>
         <!-- Stripe main subscribe link -->
-        <a class="cta" href="https://buy.stripe.com/9AQ7uvfne7FZb1SaEE" target="_blank" rel="noopener">Join the Founder Plan</a>
+        <a class="cta" href="https://buy.stripe.com/9AQ7uvfne7FZb1SaEE" target="_blank" rel="noopener">✅ Become a Founder</a>
         <div class="notice">We’ll reach out after signup to get you moving fast.</div>
       </article>
     </section>
