--- a/subscribe/index.html
+++ b/subscribe/index.html
@@ -91,7 +91,7 @@
           <li>Open-source repos and experiments</li>
         </ul>
         <div class="actions">
-          <a class="cta primary" href="https://3dvr-portal.vercel.app/free-trial.html" target="_blank" rel="noopener">Join Free</a>
+          <a class="cta primary" href="https://3dvr-portal.vercel.app/free-trial.html" target="_blank" rel="noopener">✅ Start Free</a>
           <a class="cta secondary" href="free-plan.html">Plan details</a>
         </div>
         <div class="notice">No credit card required.</div>
@@ -100,7 +100,7 @@
       <!-- SUPPORTER -->
       <article id="supporter" class="card">
         <h2>Family &amp; Friends</h2>
-        <p class="tagline">Keep your free 3dvr.tech site and add light monthly support for small updates and experiments.</p>
+        <p class="tagline">Keep your free 3dvr.tech site and enjoy light monthly support for small updates and experiments. Try it free for 30 days.</p>
         <div class="price">$5 / month</div>
         <ul>
           <li>All Free features</li>
@@ -109,16 +109,16 @@
           <li>Helps fund open development</li>
         </ul>
         <div class="actions">
-          <a class="cta primary" href="https://buy.stripe.com/28EcN599Q2dJbFdh2Qc7u07" target="_blank" rel="noopener">Join Family &amp; Friends</a>
+          <a class="cta primary" href="https://buy.stripe.com/28EcN599Q2dJbFdh2Qc7u07" target="_blank" rel="noopener">✅ Start Free Trial</a>
           <a class="cta secondary" href="early-supporter.html">Plan details</a>
         </div>
-        <div class="notice">Cancel anytime from your Stripe receipt/email.</div>
+        <div class="notice">30-day free trial. Cancel anytime from your Stripe receipt/email.</div>
       </article>
 
       <!-- PRO -->
       <article id="pro" class="card">
         <h2>Founder Plan</h2>
-        <p class="tagline">Launch your brand with a custom domain (included if $10/yr or less), plus more support as your project grows.</p>
+        <p class="tagline">Launch your brand with a custom domain (included if $10/yr or less) and get more support as your project grows.</p>
         <div class="price">$20 / month</div>
         <ul>
           <li>Done-for-you website & landing pages</li>
@@ -128,7 +128,7 @@
           <li>Access to the Builder Community</li>
         </ul>
         <div class="actions">
-          <a class="cta primary" href="https://buy.stripe.com/9AQ7uvfne7FZb1SaEE" target="_blank" rel="noopener">Join the Founder Plan</a>
+          <a class="cta primary" href="https://buy.stripe.com/9AQ7uvfne7FZb1SaEE" target="_blank" rel="noopener">✅ Become a Founder</a>
           <a class="cta secondary" href="full-access.html">Plan details</a>
         </div>
         <div class="notice">We’ll reach out after signup to get you moving fast.</div>
