Update subscription plan links and rename detail pages

--- a/subscribe/index.html
+++ b/subscribe/index.html
@@ -110,7 +110,7 @@
         </ul>
         <div class="actions">
           <a class="cta primary" href="https://buy.stripe.com/28EcN599Q2dJbFdh2Qc7u07" target="_blank" rel="noopener">✅ Start Free Trial</a>
-          <a class="cta secondary" href="early-supporter.html">Plan details</a>
+          <a class="cta secondary" href="family-friends.html">Plan details</a>
         </div>
         <div class="notice">30-day free trial. Cancel anytime from your Stripe receipt/email.</div>
       </article>
@@ -129,7 +129,7 @@
         </ul>
         <div class="actions">
           <a class="cta primary" href="https://buy.stripe.com/9AQ7uvfne7FZb1SaEE" target="_blank" rel="noopener">✅ Become a Founder</a>
-          <a class="cta secondary" href="full-access.html">Plan details</a>
+          <a class="cta secondary" href="founder-plan.html">Plan details</a>
         </div>
         <div class="notice">We’ll reach out after signup to get you moving fast.</div>
       </article>
