--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <span class="btn-like">Learn More</span>
       </a>
       <a href="subscribe/family-friends.html" class="card">
-        <h3>5 Dollar Family &amp; Friends Plan — $5 monthly</h3>
+        <h3>Family &amp; Friends Plan — $5 monthly</h3>
         <p>Keep your free 3dvr.tech site and enjoy light monthly support for small updates and experiments. Try it free for 30 days.</p>
         <span class="btn-like">Learn More</span>
       </a>
