Ensure family and friends plan title stays on one line

--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
     }
     .card:hover { background: rgba(255,255,255,0.15); transform: translateY(-5px); }
     .card h3 { color: var(--accent); font-size: 1.2rem; margin-bottom: 0.5rem; }
+    .card h3 .plan-name { white-space: nowrap; }
     .card p { font-size: 1rem; }
 
     .btn-like {
@@ -183,17 +184,17 @@
     <p>Start building your vision with the plan that fits you best. Upgrade anytime.</p>
     <div class="card-grid">
       <a href="subscribe/free-plan.html" class="card">
-        <h3>Free Plan<br>— Free!</h3>
+        <h3><span class="plan-name">Free Plan</span><br><span class="plan-price">— Free!</span></h3>
         <p>Discover your vision and get started with a free website on a 3dvr.tech subdomain.</p>
         <span class="btn-like">Learn More</span>
       </a>
       <a href="subscribe/family-friends.html" class="card">
-        <h3>Family &amp; Friends Plan<br>— $5 monthly</h3>
+        <h3><span class="plan-name">Family &amp; Friends Plan</span><br><span class="plan-price">— $5 monthly</span></h3>
         <p>Keep your free 3dvr.tech site and enjoy light monthly support for small updates and experiments. Try it free for 30 days.</p>
         <span class="btn-like">Learn More</span>
       </a>
       <a href="subscribe/founder-plan.html" class="card">
-        <h3>Founder Plan<br>— $20 monthly</h3>
+        <h3><span class="plan-name">Founder Plan</span><br><span class="plan-price">— $20 monthly</span></h3>
         <p>Launch your brand with a custom domain (included if $10/yr or less) and get more support as your project grows.</p>
         <span class="btn-like">Learn More</span>
       </a>
