Update portfolio CTA to subscription page

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -373,8 +373,8 @@
 
   <footer id="contact">
     <p>&copy; 2025 3DVR.tech. Built by open minds for an open world.</p>
-    <a class="contact-cta" href="mailto:hello@3dvr.tech">
-      <span>Start a build</span>
+    <a class="contact-cta" href="/subscribe/index.html">
+      <span>Explore subscription plans</span>
       <span aria-hidden="true">→</span>
     </a>
   </footer>
