Add public blog with portal-integrated auth and tooling

--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
     <nav id="mainNav">
       <a href="#top">Home</a>
       <a href="subscribe/index.html">Subscribe</a>
+      <a href="/blog/">Blog</a>
       <a href="#features">Features</a>
       <a href="#testimonials">Testimonials</a>
       <a href="#team">Team</a>
