Add vision section highlighting cooperative mission

--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
       <a href="subscribe/index.html">Subscribe</a>
       <a href="/blog/">Blog</a>
       <a href="#features">Features</a>
+      <a href="#vision">Vision</a>
       <a href="#testimonials">Testimonials</a>
       <a href="#team">Team</a>
       <a href="#about">About</a>
@@ -179,6 +180,20 @@
       <h2>Build the Future</h2>
       <p>Open-source tech for digital nomads, creators, and explorers.</p>
     </section>
+
+  <section id="vision" style="background: var(--bg-about);">
+    <h2>Our Cooperative Vision</h2>
+    <p>
+      We believe technology should be owned by the people who build it and the communities who rely on it.
+      By creating an employee- and customer-owned company, we're replacing big tech gatekeepers with a
+      member-driven network where everyone has a voice and a stake in the future we create together.
+    </p>
+    <p>
+      Our long-term mission is to design tools that respect both people and the planet—repairable, reusable,
+      ergonomic, healthy, and sustainable laptops, phones, and more. Today, we're starting with websites and
+      tech support to help our community grow strong roots before we branch into hardware.
+    </p>
+  </section>
 
   <section id="subscribe" style="background: var(--bg-subscribe);">
     <h2>Choose Your Plan</h2>
