--- a/vision/index.html
+++ b/vision/index.html
@@ -67,6 +67,26 @@
       .cta-row { flex-direction: column; align-items: stretch }
       .btn { width: 100%; justify-content: center }
       .grid { gap: 14px }
+      #products .card {
+        min-height: 240px;
+        padding: 20px 20px 26px;
+      }
+      #products .card .col {
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+      }
+      #products .card .col:last-child {
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: flex-start;
+        gap: 10px;
+      }
+      #products .card .col:last-child .pill {
+        flex: 1 1 calc(50% - 10px);
+        text-align: center;
+        padding: 6px 10px;
+      }
     }
     @media (max-width: 520px) {
       nav .row { flex-direction: column; align-items: flex-start; gap: 8px }
