--- a/vision/index.html
+++ b/vision/index.html
@@ -66,7 +66,8 @@
       .hero { padding: 24px 20px }
       .cta-row { flex-direction: column; align-items: stretch }
       .btn { width: 100%; justify-content: center }
-      .grid { gap: 14px }
+      .grid { gap: 14px; grid-template-columns: 1fr }
+      .card.two { grid-template-columns: 1fr }
       #products .card {
         min-height: 240px;
         padding: 20px 20px 26px;
