--- a/vision/index.html
+++ b/vision/index.html
@@ -67,6 +67,7 @@
       .cta-row { flex-direction: column; align-items: stretch }
       .btn { width: 100%; justify-content: center }
       .grid { gap: 14px; grid-template-columns: 1fr }
+      #products { display: flex; flex-direction: column }
       .card.two { grid-template-columns: 1fr }
       #products .card {
         min-height: 240px;
