Shorten vision section messaging

--- a/index.html
+++ b/index.html
@@ -337,42 +337,33 @@
       <div class="vision-grid">
         <article class="vision-card">
           <h3>Shared Ownership</h3>
-          <p>
-            We believe technology should be owned by the people who build it and the communities who rely on it.
-          </p>
+          <p>Technology belongs with the people who build it and the communities who rely on it.</p>
           <ul>
-            <li>Creating an employee and customer owned company.</li>
-            <li>Replacing big tech gatekeepers with a member-driven network.</li>
-            <li>Amplifying every voice with a meaningful stake in our future.</li>
+            <li>Employee- and customer-owned from the start.</li>
+            <li>Member voice guiding every major decision.</li>
           </ul>
         </article>
         <article class="vision-card">
           <h3>Respectful Tools</h3>
-          <p>
-            Our long-term mission is to design tools that respect both people and the planet.
-          </p>
+          <p>We design tools that protect people and the planet.</p>
           <ul>
-            <li>Repairable, reusable hardware built to last.</li>
-            <li>Ergonomic and healthy experiences that feel good to use.</li>
-            <li>Sustainable choices that reduce waste at every step.</li>
+            <li>Repairable hardware and joyful, healthy experiences.</li>
+            <li>Sustainable choices stitched into every release.</li>
           </ul>
         </article>
         <article class="vision-card">
           <h3>Growing Together</h3>
-          <p>
-            Today, we're starting with websites and tech support to help our community grow strong roots.
-          </p>
+          <p>Our services help the community thrive while preparing for the next wave of innovation.</p>
           <ul>
-            <li>Lifting up digital nomads, creators, and explorers.</li>
-            <li>Building momentum before we branch into hardware.</li>
-            <li>Cultivating a support network that keeps evolving.</li>
+            <li>Websites and support that lift up nomads, creators, and explorers.</li>
+            <li>Training pathways that equip and employ the world in cooperative tech work.</li>
           </ul>
         </article>
       </div>
       <div class="vision-footnote">
         <p>
-          This is just the beginning. As we expand, we'll continue investing in open, cooperative systems that
-          balance innovation, accessibility, and care for the Earth.
+          This is only the starting point. We'll keep investing in open, cooperative systems that balance innovation,
+          accessibility, and care for the Earth.
         </p>
         <a class="vision-link" href="https://3dvr.tech/vision">
           Find out more about our vision
