Fix hero eyebrow alignment on medium screens

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     .hero-intro {
       grid-area: hero-intro;
       text-align: left;
-      align-self: end;
+      align-self: start;
       margin-bottom: 0.5rem;
     }
     .hero-content {
@@ -303,7 +303,7 @@
         align-items: center;
         gap: clamp(2rem, 6vw, 3rem);
       }
-      .hero-intro { text-align: center; margin-bottom: 0; }
+      .hero-intro { text-align: center; margin-bottom: 0; align-self: center; }
       .hero-content { text-align: center; align-items: center; margin-top: 0; }
       .hero p { max-width: none; }
       .hero-buttons { justify-content: center; }
